--- a/assets/css/general/grid.css
+++ b/assets/css/general/grid.css
@@ -21,13 +21,7 @@
 
 @media (min-width: 992px) {
     .container {
-        max-width: 960px;
-    }
-}
-
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1170px;
+        max-width: 850px;
     }
 }
 
